# safequant-slm

./: .gitignore  .readthedocs.yaml  README.MD  README.md  __init__.py  audit.py  core.py  mkdocs.yml  reporter.py  requirements.txt  setup.py  worker.py
docs/: index.md
reports/: audit_HuggingFaceTB_SmolLM2-360M-Instruct_20260318_100636.json  audit_Qwen_Qwen2.5-0.5B_20260318_101231.json
safequant/: .gitignore  cli.py  guard.py  pyproject.toml
safequant/docs/: api.md
test/: test_audit.py
